script/lexer/MakefileCommentParser.py
# Generated from MakefileComment.g4 by ANTLR 4.10
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MakefileCommentParser ( Parser ):

    grammarFileName = "MakefileComment.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "Identifier", 
                      "Unquoted_argument", "Escape_sequence", "Quoted_argument", 
                      "Bracket_argument", "Line_comment", "DNL_comment", 
                      "Newline", "Space" ]

    RULE_file = 0
    RULE_command_invocation = 1
    RULE_single_argument = 2
    RULE_compound_argument = 3

    ruleNames =  [ "file", "command_invocation", "single_argument", "compound_argument" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    Identifier=3
    Unquoted_argument=4
    Escape_sequence=5
    Quoted_argument=6
    Bracket_argument=7
    Line_comment=8
    DNL_comment=9
    Newline=10
    Space=11

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.10")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class FileContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MakefileCommentParser.EOF, 0)

        def command_invocation(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MakefileCommentParser.Command_invocationContext)
            else:
                return self.getTypedRuleContext(MakefileCommentParser.Command_invocationContext,i)


        def getRuleIndex(self):
            return MakefileCommentParser.RULE_file

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFile" ):
                listener.enterFile(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFile" ):
                listener.exitFile(self)




    def file_(self):

        localctx = MakefileCommentParser.FileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_file)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 11
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MakefileCommentParser.Identifier:
                self.state = 8
                self.command_invocation()
                self.state = 13
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 14
            self.match(MakefileCommentParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Command_invocationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(MakefileCommentParser.Identifier, 0)

        def single_argument(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MakefileCommentParser.Single_argumentContext)
            else:
                return self.getTypedRuleContext(MakefileCommentParser.Single_argumentContext,i)


        def compound_argument(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MakefileCommentParser.Compound_argumentContext)
            else:
                return self.getTypedRuleContext(MakefileCommentParser.Compound_argumentContext,i)


        def getRuleIndex(self):
            return MakefileCommentParser.RULE_command_invocation

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCommand_invocation" ):
                listener.enterCommand_invocation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCommand_invocation" ):
                listener.exitCommand_invocation(self)




    def command_invocation(self):

        localctx = MakefileCommentParser.Command_invocationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_command_invocation)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 16
            self.match(MakefileCommentParser.Identifier)
            self.state = 17
            self.match(MakefileCommentParser.T__0)
            self.state = 22
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MakefileCommentParser.T__0) | (1 << MakefileCommentParser.Identifier) | (1 << MakefileCommentParser.Unquoted_argument) | (1 << MakefileCommentParser.Quoted_argument) | (1 << MakefileCommentParser.Bracket_argument))) != 0):
                self.state = 20
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [MakefileCommentParser.Identifier, MakefileCommentParser.Unquoted_argument, MakefileCommentParser.Quoted_argument, MakefileCommentParser.Bracket_argument]:
                    self.state = 18
                    self.single_argument()
                    pass
                elif token in [MakefileCommentParser.T__0]:
                    self.state = 19
                    self.compound_argument()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 24
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 25
            self.match(MakefileCommentParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Single_argumentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(MakefileCommentParser.Identifier, 0)

        def Unquoted_argument(self):
            return self.getToken(MakefileCommentParser.Unquoted_argument, 0)

        def Bracket_argument(self):
            return self.getToken(MakefileCommentParser.Bracket_argument, 0)

        def Quoted_argument(self):
            return self.getToken(MakefileCommentParser.Quoted_argument, 0)

        def getRuleIndex(self):
            return MakefileCommentParser.RULE_single_argument

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSingle_argument" ):
                listener.enterSingle_argument(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSingle_argument" ):
                listener.exitSingle_argument(self)




    def single_argument(self):

        localctx = MakefileCommentParser.Single_argumentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_single_argument)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 27
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MakefileCommentParser.Identifier) | (1 << MakefileCommentParser.Unquoted_argument) | (1 << MakefileCommentParser.Quoted_argument) | (1 << MakefileCommentParser.Bracket_argument))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Compound_argumentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def single_argument(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MakefileCommentParser.Single_argumentContext)
            else:
                return self.getTypedRuleContext(MakefileCommentParser.Single_argumentContext,i)


        def compound_argument(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MakefileCommentParser.Compound_argumentContext)
            else:
                return self.getTypedRuleContext(MakefileCommentParser.Compound_argumentContext,i)


        def getRuleIndex(self):
            return MakefileCommentParser.RULE_compound_argument

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCompound_argument" ):
                listener.enterCompound_argument(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCompound_argument" ):
                listener.exitCompound_argument(self)




    def compound_argument(self):

        localctx = MakefileCommentParser.Compound_argumentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_compound_argument)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 29
            self.match(MakefileCommentParser.T__0)
            self.state = 34
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MakefileCommentParser.T__0) | (1 << MakefileCommentParser.Identifier) | (1 << MakefileCommentParser.Unquoted_argument) | (1 << MakefileCommentParser.Quoted_argument) | (1 << MakefileCommentParser.Bracket_argument))) != 0):
                self.state = 32
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [MakefileCommentParser.Identifier, MakefileCommentParser.Unquoted_argument, MakefileCommentParser.Quoted_argument, MakefileCommentParser.Bracket_argument]:
                    self.state = 30
                    self.single_argument()
                    pass
                elif token in [MakefileCommentParser.T__0]:
                    self.state = 31
                    self.compound_argument()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 36
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 37
            self.match(MakefileCommentParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





